# midi-event

./: Cargo.toml  README.md
fuzz/: Cargo.toml
fuzz/fuzz_targets/: fuzz_target_1.rs
src/: lib.rs  parse.rs  write.rs
src/types/: mod.rs  note.rs
