[package]
name = "midi-event"
description = "Fast midi event parsing/writing out."
version = "0.2.0"
authors = ["Richard Dodd <richard.o.dodd@gmail.com>"]
edition = "2018"
license = "MIT OR Apache-2.0"
readme = "README.md"
repository = "https://github.com/derekdreery/midi-event"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[target.'cfg(fuzzing)'.dependencies]
arbitrary = { version = "0.4.2", features = ["derive"] }
